--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,11 @@ li {
   list-style: none;
 }
 
+header {
+  text-align: center;
+  margin: 30px 0;
+}
+
 body {
   color: #113f67;
 }
@@ -86,17 +91,31 @@ footer {
   text-transform: capitalize;
 }
 
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
 .week-day {
+  text-align: center;
   font-size: 20px;
 }
 
 .weather-image {
   font-size: 24px;
+  text-align: center;
 }
-
 .temperature-range {
+  text-align: center;
+  display: flex;
+  justify-content: center;
   font-family: "Assistant", sans-serif;
   font-weight: 600;
+}
+
+.max-temp {
+  padding: 0 5px;
 }
 
 .min-temp {
