--- a/src/styles.css
+++ b/src/styles.css
@@ -81,8 +81,7 @@ footer {
 #current-time,
 #humidity,
 #wind,
-.humidity-wind,
-.temperature-range {
+.humidity-wind {
   font-size: 18px;
 }
 
@@ -103,8 +102,10 @@ footer {
 }
 
 .weather-image {
-  font-size: 24px;
-  text-align: center;
+  width: 76px;
+  height: 76px;
+  display: block;
+  margin: 0 auto;
 }
 .temperature-range {
   text-align: center;
@@ -112,15 +113,16 @@ footer {
   justify-content: center;
   font-family: "Assistant", sans-serif;
   font-weight: 600;
+  font-size: 20px;
 }
 
 .max-temp {
-  padding: 0 5px;
+  padding: 0 7px 0 0;
 }
 
 .min-temp {
   color: #455d80;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .fa-location-dot {
