Changed footer font size

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@ footer {
   max-width: 600px;
   background: rgb(238, 230, 242);
   border-radius: 10px;
-  font-size: small;
+  font-size: 12px;
 }
 
 .wrapper {
